v.2.124.60 Flickering issues have been fixed when displaying advertisements for current series.

--- a/client/src/Pages/Main/MainPage.module.css
+++ b/client/src/Pages/Main/MainPage.module.css
@@ -51,6 +51,6 @@
   }
   .wrapper__preview {
     gap: 15px;
-    margin-bottom: 0;
+    margin-bottom: 15px;
   }
 }
